계속 배우기/spring/SmsExample/src/main/java/com/example/smsexample/global/error/CustomException.java
package com.example.smsexample.global.error;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class CustomException extends RuntimeException {
    private final ErrorCode errorCode;
}


